[gd_scene load_steps=3 format=3 uid="uid://dpkxiueelrylv"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_kc4of"]
[ext_resource type="Theme" uid="uid://b1a5sjt2xibwo" path="res://assets/themes/strata_theme.tres" id="2_r4pjr"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kc4of")

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -144.0
offset_top = -240.0
offset_right = 144.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="StartButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
theme = ExtResource("2_r4pjr")
text = "START"

[node name="OptionsButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme = ExtResource("2_r4pjr")
text = "OPTIONS"

[node name="QuitButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_bottom = NodePath("../StartButton")
theme = ExtResource("2_r4pjr")
text = "QUIT"

[connection signal="pressed" from="ButtonsContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/QuitButton" to="." method="_on_quit_button_pressed"]
