[gd_scene load_steps=7 format=3 uid="uid://dpkxiueelrylv"]

[ext_resource type="Script" path="res://scenes/scripts/ui/main_menu.gd" id="1_kc4of"]
[ext_resource type="PackedScene" uid="uid://3js2ufvdnk2k" path="res://scenes/ui/menu_central_page.tscn" id="4_5j20p"]
[ext_resource type="Texture2D" uid="uid://bl66ij78aurfm" path="res://assets/textures/static/gear_icon_outline.png" id="5_4bqm0"]
[ext_resource type="Texture2D" uid="uid://nsnw7fqu4cml" path="res://assets/textures/static/gear_icon.png" id="6_a6h02"]
[ext_resource type="BitMap" uid="uid://dngmj6m7g1uu4" path="res://assets/textures/static/gear_icon_bitmap.bmp" id="7_pvmh6"]
[ext_resource type="PackedScene" uid="uid://bpha3godigcg2" path="res://scenes/ui/menu_loadout_selection.tscn" id="11_4yjnj"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kc4of")

[node name="MenuPages" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadoutPage" parent="MenuPages" instance=ExtResource("11_4yjnj")]
layout_mode = 1
offset_left = 1000.0
offset_right = 1000.0
debug = true

[node name="CentralPage" parent="MenuPages" instance=ExtResource("4_5j20p")]

[node name="ProfilesPage" type="Control" parent="MenuPages"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -960.0
offset_right = -960.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConfigButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -90.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 90.0
grow_horizontal = 0
focus_neighbor_left = NodePath("../MenuPages/CentralPage/ButtonsContainer/StartButton")
texture_normal = ExtResource("5_4bqm0")
texture_pressed = ExtResource("5_4bqm0")
texture_hover = ExtResource("6_a6h02")
texture_click_mask = ExtResource("7_pvmh6")
stretch_mode = 6

[connection signal="pressed" from="ConfigButton" to="." method="_on_config_button_pressed"]
